<?xml version="1.0"?>
<package format="2">
<name>demorobot</name>
<version>0.0.0</version>
<description>A package containing a demo for KIARA</description>
<maintainer email="ricardogonzalez@eprosima.com">Ricardo González</maintainer>
<license>Apache License 2.0</license>

<buildtool_depend>ament_cmake</buildtool_depend>
<buildtool_depend>rosidl_default_generators</buildtool_depend>

<build_depend>rclcpp</build_depend>
<build_depend>rmw_implementation</build_depend>
<build_depend>std_interfaces</build_depend>

<exec_depend>rclcpp</exec_depend>
<exec_depend>rmw_implementation</exec_depend>
<exec_depend>rosidl_default_runtime</exec_depend>
<exec_depend>std_interfaces</exec_depend>
</package>
